# hello-vscode-world

./: README.md
linux/Asm/: .gitignore  CMakeLists.txt  README.md  hello.asm
linux/Asm/.devcontainer/: Dockerfile
linux/C++/: CMakeLists.txt  README.md  main.cpp
linux/C++ and Cuda/: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cu  test.cuh
linux/C++ and Cuda/.devcontainer/: Dockerfile
linux/C++/.devcontainer/: Dockerfile  devcontainer.json
linux/Cobol/: .gitignore  README.md  main.cbl
linux/Cobol/.devcontainer/: Dockerfile  devcontainer.json
linux/Go/: README.md  hello.go
linux/Go/.devcontainer/: Dockerfile  devcontainer.json
linux/Java/: Main.java  README.md
linux/Java/.devcontainer/: Dockerfile  devcontainer.json
linux/Net Core/: Net Core.csproj  Program.cs  README.md
linux/Node/: README.md  main.ts  package-lock.json  package.json
linux/Node & Multiple Devcontainers/: main.ts  package.json  tsconfig.json
linux/Node & Multiple Devcontainers/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
linux/Node & Multiple Devcontainers/src/: app.ts
linux/Node & Multiple Devcontainers/src/abstracts/: gene.ts
linux/Node & Multiple Devcontainers/src/authentication/: authentication.ts
linux/Node & Multiple Devcontainers/src/classes/: configuration.ts  gene.ts  insert.ts  movement.ts  schema.ts  score.ts  sentence.ts  statistics.ts  strategy.ts  vector.ts
linux/Node/.devcontainer/: docker-compose.yml
linux/Node/src/: app.ts
linux/Node/src/classes/: breeding.ts  collision.ts  lifetime.ts  settings.ts  specification.ts
linux/Node/src/mongo/: hello.ts
linux/Node/src/routers/: routes.ts
linux/Python/: README.md
linux/Python/.devcontainer/: Dockerfile  devcontainer.json
linux/React/: README.md
linux/React/.devcontainer/: devcontainer.json
linux/Rust/: .dccache  .gitignore  README.md  cargo.toml
linux/Rust/.devcontainer/: Dockerfile  devcontainer.json
linux/Swift/: Package.swift  README.md
linux/Swift/.devcontainer/: Dockerfile  devcontainer.json
linux/Swift/Tests/: LinuxMain.swift
linux/Swift/Tests/SwiftTests/: SwiftTests.swift  XCTestManifests.swift
(+14 files in other folders)
